<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Gym Viet Care</string>
    <string name="capture_name">Đọc QR Code</string>
    <string name="encoder_name">Mã hóa QR Code</string>
    <string name="decoder_name">Đọc QR Code</string>
    <string name="contents_contact">Liên lạc</string>
    <string name="contents_email">Email</string>
    <string name="contents_location">Vị trí tọa độ</string>
    <string name="contents_phone">Số điện thoại</string>
    <string name="contents_sms">Tin nhắn</string>
    <string name="contents_text">Chữ</string>
    <string name="msg_default_contents">Nội dung</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_welcome">Gym Việt vì sức khỏe người Việt</string>
    <string name="msg_default_status">Đặt mã QR vào trong vùng trống để đọc.</string>
    <string name="msg_default_time">Thời gian</string>
    <string name="msg_default_type">Loại</string>
    <string name="msg_please_login">Hãy đăng nhập hoặc đăng ký để có tài khoản</string>
    <string name="msg_add_involve_successful">Thêm khách hàng thành công</string>
    <string name="msg_involve_shop_successful">Tham gia cửa hàng thành công</string>
    <string name="msg_add_involve_failed">Lỗi hệ thống</string>
    <string name="msg_add_involve_already">Khách hàng đã tham gia</string>
    <string name="msg_remove_involve_successful">Xóa khách hàng thành công</string>
    <string name="msg_remove_involve_failed">Không thể xóa khách hàng</string>
    <string name="msg_remove_involve_already">Khách hàng đã xóa</string>
    <string name="msg_add_point_successful">Cộng điểm khách hàng thành công</string>
    <string name="msg_point_history_failed">Có lỗi nhỏ, thử lại sau</string>
    <string name="msg_customer_list_fail">Có lỗi nhỏ, thử lại sau</string>
    <string name="msg_login_incorrect">Sai email hoặc password. Hãy thử lại</string>
    <string name="msg_login_error">Lỗi khi kết nối máy chủ</string>
    <string name="msg_register_existed">Email đã tồn tại</string>
    <string name="msg_register_error">Lỗi khi tạo tài khoản</string>
    <string name="msg_register_wrong_email">Email không hợp lệ</string>
    <string name="msg_register_not_address">Email phải có dạng a@b.c</string>
    <string name="msg_register_name_invalid">Hãy nhập tên của bạn</string>
    <string name="msg_register_password_not_match">Hai password không trùng khớp</string>
    <string name="msg_register_password_invalid">Password quá ngắn</string>
    <string name="msg_no_network_common">Hãy mở kết nối mạng để sử dụng ứng dụng</string>
    <string name="msg_no_network_function">Hãy mở kết nối mạng để sử dụng chức năng này</string>
    <string name="msg_err_request_login">Hãy thử đăng nhập lại để sử dụng chức năng này</string>
    <string name="msg_err_not_found">Không tìm thấy trong hệ thống</string>
    <string name="msg_err_error">Lỗi hệ thống</string>
    <string name="msg_err_need_involved_customer">Khách hàng chưa tham gia</string>
    <string name="msg_err_need_involved_shop">Bạn chưa tham gia vào cửa hàng này</string>
    <string name="msg_checkin_valid">Thẻ thành viên hợp lệ</string>
    <string name="msg_checkin_outdate">Thẻ thành viên hết hạn</string>
    <string name="result_address_book">Liên lạc</string>
    <string name="result_calendar">Lịch</string>
    <string name="result_email_address">Email</string>
    <string name="result_geo">Vị trí tọa độ</string>
    <string name="result_isbn">Sách</string>
    <string name="result_product">Sản phẩm</string>
    <string name="result_sms">Nhắn tin</string>
    <string name="result_tel">SĐT</string>
    <string name="result_text">Chữ</string>
    <string name="result_uri">Link</string>
    <string name="result_wifi">Cài đặt wifi</string>
    <string name="wifi_changing_network">Thay đổi kết nối mạng</string>
    <string name="wifi_ssid_label">Tên wifi</string>
    <string name="wifi_type_label">Loại</string>
    <string name="barcode_image">Mã vạch</string>
    <string name="hello_world">Gym Việt Care</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_scan">Dò mã QR</string>
    <string name="menu_generate">Tạo mã QR</string>
    <string name="menu_login">Đăng nhập</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="menu_add_point">Thêm</string>
    <string name="menu_feedback">Góp ý</string>
    <string name="txt_add_invol">Thêm khách hàng</string>
    <string name="txt_remove_invol">Xóa khách hàng</string>
    <string name="txt_add_point_type">Kiểu: bán hàng</string>
    <string name="txt_add_point_detail">Chi tiết</string>
    <string name="txt_add_point">Số điểm</string>
    <string name="txt_add_point_detail_hint">Chi tiết giao dịch</string>
    <string name="txt_state_ads_none">Chưa có tin tức mới</string>
    <string name="txt_state_history_none">Chưa có giao dịch</string>
    <string name="txt_state_customers_none">Chưa có khách hàng</string>
    <string name="txt_state_points_none">Chưa có điểm</string>
    <string name="txt_function_onprogress">Chức năng đang xây dựng</string>
    <string name="login_login">Đăng nhập</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="btn_register_me">Đăng ký</string>
    <string name="btn_register_shop">Đăng ký cửa hàng</string>
    <string name="btn_register">Đăng ký</string>
    <string name="btn_log_me_in">Đăng nhập</string>
    <string name="btn_add_point">Cộng điểm</string>
    <string name="btn_scan_product">Dò sản phẩm</string>
    <string name="btn_to_add_point">+ Điểm</string>
    <string name="btn_add_membership">Thêm hội viên</string>
    <string name="btn_renew_membership">Làm mới hội viên</string>
    <string name="btn_checkin">Checkin</string>
    <string name="btn_involve_this_shop">Tham gia vào cửa hàng</string>
    <string name="btn_uninvolve_this_shop">Ngưng tham gia</string>
    <string name="reg_register">Đăng ký</string>
    <string name="reg_full_name">Tên đầy đủ</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Xác nhận password</string>
    <!-- <string name="url_base">http://192.168.202.1:80/</string> -->
    <!-- <string name="url_base">http://192.168.11.9:80/</string> -->
    <!-- <string name="url_base">http://10.0.2.2:80/</string> -->
    <string name="url_base">http://crm.gymviet.com/</string>
    <string name="url_login">customer-app/login</string>
    <string name="url_register">customer-app/register</string>
    <string name="url_get_customer_infor">customer-app/getuserinfo</string>
    <string name="url_add_my_customer">customer-app/addmycustomer</string>
    <string name="url_add_my_shop">customer-app/addmyshop</string>
    <string name="url_add_customer_point">customer-app/addcustomerpoint</string>
    <string name="url_get_customer_history">customer-app/getcustomerhistory</string>
    <string name="url_get_shop_info">customer-app/getshopinfo</string>
    <string name="url_get_point_history">customer-app/getpointhistory</string>
    <string name="url_get_involvement_customer">customer-app/getcustomerinvolve</string>
    <string name="url_get_involvement_shop">customer-app/getshopinvolve</string>
    <string name="url_get_shop_customer_points">customer-app/getshopcustomerpoints</string>
    <string name="url_get_report_customer_age">dw-rest/age</string>
    <string name="url_get_report_customer_gender">dw-rest/gender</string>
    <string name="url_get_report_customer_location">dw-rest/location</string>
    <string name="url_get_report_new_customers">dw-rest/new-customer</string>
    <string name="url_get_report_point_sumup">dw-rest/point-sumup</string>
    <string name="shop_tool_contact">Liên lạc</string>
    <string name="shop_tool_report">Báo cáo</string>
    <string name="shop_tool_product">Sản phẩm</string>
    <string name="shop_tool_sale_order">Đơn đặt hàng</string>
    <string name="shop_tool_purchase_order">Đơn đặt mua</string>
    <string name="shop_tool_financial">Tài chính</string>
    <string name="report_heading_age">Tuổi</string>
    <string name="report_heading_gender">Giới tính</string>
    <string name="report_heading_location">Địa điểm</string>
    <string name="report_heading_new_customer">Khách hàng mới</string>
    <string name="report_heading_point_sumup">Thống kê điểm</string>
    <string name="report_txt_yesterday">30 ngày</string>
    <string name="report_txt_women">Nữ</string>
    <string name="report_txt_men">Nam</string>
    <string name="report_txt_location">Địa điểm</string>
    <string name="report_txt_fans">Khách hàng của bạn</string>
    <string name="title_activity_main">Gym Việt Care</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="title_activity_register">Đăng ký</string>
    <string name="title_activity_shop_info">Thông tin cửa hàng</string>
    <string name="title_activity_customer_info">Thông tin khách hàng</string>
    <string name="title_activity_add_customer_point">Cộng điểm</string>
    <string name="title_activity_scan">Dò mã QR</string>
    <string name="title_activity_point_history">Lịch sử điểm thưởng</string>
    <string name="action_settings">Cài đặt</string>
    <string name="title_activity_customer_list">Danh sách khách hàng</string>
    <string name="title_activity_customer_main">Khách hàng</string>
    <string name="title_customer_section1">Home</string>
    <string name="title_customer_section2">Tin tức</string>
    <string name="title_customer_section3">Điểm</string>
    <string name="title_shop_section1">Home</string>
    <string name="title_shop_section2">Khách hàng</string>
    <string name="title_shop_section3">Công cụ</string>
    <string name="title_activity_shop_main">Cửa hàng</string>
    <string name="title_activity_gymclub_main">Phòng tập</string>
    <string name="title_gym_section1">Checkin</string>
    <string name="title_gym_section2">Khách hàng</string>
    <string name="title_gym_section3">Công cụ</string>
    <string name="title_activity_scan_for_result">Dò mã QR</string>
    <string name="title_activity_shop_customer_points">Điểm khách hàng</string>
    <string name="title_activity_shop_report">Báo cáo</string>
    <string name="title_report_section1">Khách hàng</string>
    <string name="title_report_section2">Kh/hàng mới</string>
    <string name="title_report_section3">Điểm</string>
    <string name="title_activity_register_shop">Đăng ký cửa hàng</string>
    <string name="title_activity_feedback">Phản hồi góp ý</string>

</resources>