<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/prgbReportNewCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_heading_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
        <LinearLayout
            android:id="@+id/graphReportGender"
            android:layout_width="fill_parent"
            android:layout_height="250dip"
            android:orientation="vertical" >
        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_heading_age"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/graphReportAge"
            android:layout_width="fill_parent"
            android:layout_height="250dip"
            android:orientation="vertical" >

        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_heading_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
            android:id="@+id/layoutReportLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>

    </LinearLayout>

</ScrollView>