<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShopInfoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/customer_info"/>

        <!-- Layout for Add customer involvement function -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ProgressBar
                android:id="@+id/prgbAddInvolvement"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ToggleButton
                android:id="@+id/tgbAddInvolvement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onToggleClicked"
                android:textOff="@string/txt_add_invol"
                android:textOn="@string/txt_remove_invol" />
        </LinearLayout>

        <!-- Layout for adding point if customer involved in this shop: just a button -->

        <Button
            android:id="@+id/btnToAddPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/btn_to_add_point" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgbCustomerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>